--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,16 @@ android {
 }
 
 dependencies {
+// For Card view
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+// Chart and graph library
+    implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
+    implementation 'com.nineoldandroids:library:2.4.0'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.android.volley:volley:1.1.1'
+
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
